# cmd/api/health.go
@@ -4,6 +4,14 @@ import (
 	"net/http"
 )
 
+// healthcheckHandler godoc
+//
+//	@Summary		Healthcheck
+//	@Description	Healthcheck endpoint
+//	@Tags			ops
+//	@Produce		json
+//	@Success		200	{object}	string	"ok"
+//	@Router			/health [get]
 func (app *application) healthcheckHandler(w http.ResponseWriter, r *http.Request) {
 	data := map[string]string{
 		"status":  "ok",
