# cmd/api/users.go
@@ -13,6 +13,20 @@ type userContextKey string
 
 const userCtxKey userContextKey = "user"
 
+// GetUser godoc
+//
+//	@Summary		Fetches a user profile
+//	@Description	Fetches a user profile by ID
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		int	true	"User ID"
+//	@Success		200	{object}	store.User
+//	@Failure		400	{object}	error
+//	@Failure		404	{object}	error
+//	@Failure		500	{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/users/{id} [get]
 func (app *application) getUserHandler(w http.ResponseWriter, r *http.Request) {
 	user := getUserFromContext(r)
 
@@ -25,6 +39,20 @@ type FollowUser struct {
 	UserID int64 `json:"user_id"`
 }
 
+// followUserHandler godoc
+//
+//	@Summary		Follow a user
+//	@Description	Allows the authenticated user to follow another user
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body	FollowUser	true	"User ID to follow"
+//	@Success		204		"No Content"
+//	@Failure		400		{object}	error	"Bad Request"
+//	@Failure		409		{object}	error	"Conflict - Already following or trying to follow self"
+//	@Failure		500		{object}	error	"Internal Server Error"
+//	@Security		ApiKeyAuth
+//	@Router			/users/follow [post]
 func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request) {
 	followerUser := getUserFromContext(r)
 
@@ -52,6 +80,19 @@ func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request
 	}
 }
 
+// unfollowUserHandler godoc
+//
+//	@Summary		Unfollow a user
+//	@Description	Allows the authenticated user to unfollow another user
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body	FollowUser	true	"User ID to unfollow"
+//	@Success		204		"No Content"
+//	@Failure		400		{object}	error	"Bad Request"
+//	@Failure		500		{object}	error	"Internal Server Error"
+//	@Security		ApiKeyAuth
+//	@Router			/users/unfollow [post]
 func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Request) {
 	followerUser := getUserFromContext(r)
 
